--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "bootstrap": "^5.3.0",
         "clsx": "^1.2.1",
         "firebase": "^9.22.1",
+        "mongoose-slug-updater": "^3.3.0",
         "nodemon": "^2.0.22",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
