--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "firebase": "^9.22.1",
         "mongoose-slug-updater": "^3.3.0",
         "nodemon": "^2.0.22",
+        "now-sapper": "^0.39.2",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
