--- a/handleDB/package.json
+++ b/handleDB/package.json
@@ -16,6 +16,7 @@
         "express": "^4.18.2",
         "mongodb": "^5.6.0",
         "mongoose": "^7.2.3",
+        "mongoose-slug-updater": "^3.3.0",
         "nodemon": "^2.0.22"
     }
 }
